outputs/tsp_constructive-constructive/2025-09-21_21-49-46/evaluations/problem_eval1766900151749961458_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    default, dynamically overriding with the destination node only if it is within 1.5 times the average distance to unvisited nodes, balancing exploration and destination prioritization while ensuring flexibility through a dynamic threshold.}
                                                                                                                                                                                                                                                  ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    default, dynamically overriding with the destination node only if it is within 1.5 times the average distance to unvisited nodes, balancing exploration and destination prioritization while ensuring flexibility through a dynamic threshold.}
                                                                                                                                                                                                                                                  ^
SyntaxError: unmatched '}'
